add more files, init 2

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ Debug.win32/*
 
 .tags
 .tags_sorted_by_file
+help.chm
+history.mdb
+hisory.dlx
+ico-arrow.gif
+_UpgradeReport_Files/UpgradeReport.css
+_UpgradeReport_Files/UpgradeReport.xslt
+_UpgradeReport_Files/UpgradeReport_Error.png
+_UpgradeReport_Files/UpgradeReport_Information.png
+_UpgradeReport_Files/UpgradeReport_Success.png
+_UpgradeReport_Files/UpgradeReport_Warning.png
+_UpgradeReport_Files/*
+_UpgradeReport_Files
