--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ _UpgradeReport_Files/UpgradeReport_Success.png
 _UpgradeReport_Files/UpgradeReport_Warning.png
 _UpgradeReport_Files/*
 _UpgradeReport_Files
+uinfo.txt
+MyIM.sdf
+MyIM.opensdf
