rm web site, ignore cancel direct.

--- a/EIM02.vcxproj
+++ b/EIM02.vcxproj
@@ -237,4 +237,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="EIM02.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
