add login text, seems not too much problems.

--- a/EIM02.rc
+++ b/EIM02.rc
@@ -118,17 +118,17 @@ BEGIN
     LTEXT           "Static",IDC_STATIC_FACE,5,123,258,16
 END
 
-IDD_USER_SETTING DIALOG 0, 0, 198, 127
+IDD_USER_SETTING DIALOGEX 0, 0, 198, 127
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "显示名称"
-FONT 9, "宋体"
+FONT 9, "宋体", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "确定",IDOK,43,103,50,14
     PUSHBUTTON      "取消",IDCANCEL,118,103,50,14
-    ICON            IDI_USER_SETTING,IDC_STATIC,16,16,21,21
+    ICON            IDI_USER_SETTING,IDC_STATIC,16,16,20,20
     EDITTEXT        IDC_EDIT1,88,21,91,12,ES_AUTOHSCROLL
     LTEXT           "显示名称：",IDC_STATIC,42,23,42,8
-    ICON            IDR_MAINFRAME,IDC_STATIC,16,49,21,21
+    ICON            IDR_MAINFRAME,IDC_STATIC,16,49,20,20
     COMBOBOX        IDC_COMBO1,88,53,91,110,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "所在分组：",IDC_STATIC,42,56,42,8
 END
@@ -215,6 +215,21 @@ BEGIN
     COMBOBOX        IDC_COMBO1,203,5,72,196,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "DateTimePicker1",IDC_DATETIMEPICKER1,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,203,22,72,14
     CONTROL         "",IDC_RICHEDIT1,"RICHEDIT",TCS_HOTTRACK | TCS_RAGGEDRIGHT | TCS_MULTISELECT | WS_BORDER | WS_VSCROLL | WS_TABSTOP,7,53,274,183
+END
+
+IDD_USER_LOGIN DIALOGEX 0, 0, 198, 127
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "登录框"
+FONT 9, "宋体", 0, 0, 0x0
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,43,103,50,14
+    PUSHBUTTON      "取消",IDCANCEL,118,103,50,14
+    ICON            IDI_USER_SETTING,IDC_STATIC,16,16,20,20
+    EDITTEXT        IDC_EDIT1,88,21,91,12,ES_AUTOHSCROLL
+    LTEXT           "登录：",IDC_STATIC,42,23,42,8
+    ICON            IDR_MAINFRAME,IDC_STATIC,16,49,20,20
+    LTEXT           "密码：",IDC_STATIC,42,56,42,8
+    EDITTEXT        IDC_EDIT7,87,53,91,12,ES_AUTOHSCROLL
 END
 
 
@@ -318,11 +333,27 @@ BEGIN
         BOTTOMMARGIN, 87
     END
 
+    IDD_VOICE1, DIALOG
+    BEGIN
+    END
+
+    IDD_VOICE2, DIALOG
+    BEGIN
+    END
+
     IDD_VIEWHISTORY, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 281
         BOTTOMMARGIN, 253
+    END
+
+    IDD_USER_LOGIN, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 191
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 117
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -345,10 +376,11 @@ BEGIN
     POPUP "选项(&O)"
     BEGIN
         MENUITEM "个人设置(&N)",                    IDM_SHOWNAME
+        MENUITEM "登入",                          IDM_SHOWLOGIN
     END
     POPUP "帮助(&H)"
     BEGIN
-        MENUITEM "关于 FreeIM(&A)",              IDM_ABOUTEIM
+        MENUITEM "关于 FreeIM(&A)",               IDM_ABOUTEIM
     END
 END
 
